src/objects/Accounting_Defaults__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Contains Default Account Values for Update Triger</description>
    <fields>
        <fullName>Accounts_Payable_Control__c</fullName>
        <label>Accounts Payable Control</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounts_Receivable_Control__c</fullName>
        <label>Accounts Receivable Control</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Date_1__c</fullName>
        <label>Base Date 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Method__c</fullName>
        <label>Billing_Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Offset_1__c</fullName>
        <label>Days Offset 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EC_Country__c</fullName>
        <label>EC Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Contact__c</fullName>
        <label>Finance Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Input_VAT_Code__c</fullName>
        <label>Input VAT Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Email__c</fullName>
        <label>Invoice Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Output_VAT_Code__c</fullName>
        <label>Output VAT Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Calculation_Method__c</fullName>
        <label>Tax Calculation Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Status__c</fullName>
        <label>Tax Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Last_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Uses the last modified contact on the Accounts Conacts list for the Finance Contact and Invoice Email Address.</description>
        <label>Use Last Contact</label>
        <type>Checkbox</type>
    </fields>
    <label>Accounting Defaults</label>
</CustomObject>